chamber/styles/base.css
/* General Body Styling */
body {
    font-family: 'Raleway', sans-serif;
    line-height: 1.6;
    margin: 0;
    padding: 0;
    background-color: #E4EBFB;
}




/* Header Styling */
header {
    background: #E4EBFB;
    color: #353535;
    padding: 20px 0;
    text-align: left;
    display: flex; 
    align-items: center; 
    justify-content: left; 
    position: relative;
    z-index: 2;
 

}

header img {
    max-width: 100px;
    height: auto;
    margin-right: 20px; 
    margin-left: 50px;
    border-radius: 7px;
}






/* Toggle Switch */
.theme-switch-wrapper {
    position: absolute;
    right: 40px;
    top: 5px;
    display: flex;
    align-items: center;
}

.theme-switch {
    display: inline-block;
    height: 34px;
    position: relative;
    width: 60px;
}

.theme-switch input {
    display:none;
}

.slider {
    background-color: #ccc;
    bottom: 0%;
    cursor: pointer;
    left: 0%;
    position: absolute;
    right: 0%;
    top: 0%;
    transition: .4s;
}

.slider:before {
    background-color: #fff;
    bottom: 4px;
    content: "dark";
    height: 26px;
    left: 4px;
    position: absolute;
    transition: .4s;
    width: 26px;
}

input:checked + .slider {
    background-color: #66bb6a;
    
}

input:checked + .slider:before {
    transform: translateX(26px);
    content: '';
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}










/* small view navigation */
#menu {
	font-size: 1.5rem;
	border: 1px solid rgba(0,0,0,.3);
	padding: 3px 7px 6px;
	background-color: #eee;
	color: #000;
 	position: fixed;
	top: 0;
	right: 0;
    z-index: 100;
    
}

#menu::before {
	content: "☰";
}

#menu.open::before {
	content: "✖️";
}

.navigation {
	display: flex;
    overflow: hidden;
    position: absolute;
    top: 235px;
    width: 100%;
    z-index: 1; 
	flex-direction: column;
	list-style: none;
	background-color: rgba(0, 0, 0, 0.5); 
	color: #fff;
    padding: 0px;
    margin-top: 0;

}
.navigation li {
	display: none;
}

.navigation li a {
	display: block;
	padding: 1rem ;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation li a:hover {
    background-color: rgba(133, 130, 130, 0.5);
    color: #f8f8f8;
	font-weight: 700;
    padding-left: 0px;
    
   
}








/* 
when the button is clicked - the open class is toggle (added/removed) and accounted for here */
 .open li {
	display: block;
	width: 100%;
}
.open li a {
	display: block;
}

.active::before {
	content: "| ";
  
}
.active::after {
	content: " |";
  
}





.navigation li a.active {
    font-weight: bold;
    
}
.navigation a {
    padding-left: 0;
} 









.container {
    margin-top: 50px;
    display: grid;
    grid-template-columns: 1fr ;
    gap: 30px;
}

.sidebar {
    padding: 20px;
    margin-left: 20px;
    width: auto;
    background-color: #f4f4f4;
    margin-left: 0;
}

.main-content {
    padding: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: auto;
    margin-left: 0;

}






.main-content img {
    margin-top: 0;
    max-width: 1500px;
    width: 100%;
    height: auto;
    margin-bottom: 20px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3s ease;

}

.img-label {
    margin-bottom: 200px;
}




.main-content img:hover {
    transform: scale(1.03);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); 
    z-index: 10; 
}




#visitMessage, .calendar-section, .demographics-section, .heading-section, .calendar-section, .upcoming-section {
    background-color: #f2f2f2; 
    font-size: small;
    padding: 20px;
    grid-column: 1 / 3;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 100%;
    box-sizing: border-box;
    text-align: left;
    margin: 0 auto 50px auto;
    color: #353535;

}

.calendar-section h2, .demographics-section h2 {
    margin-top: 0;
}

ul {
    list-style-type: none; 
    padding: 0;
}

li {
    margin-bottom: 5px; 
}














/* hero styling */


.hero-container {
    position: relative;
    text-align: center;
    margin-top: -20px;
    
}

.hero-image {
    max-width: 1480px;
    width: 100%;
    height: auto;
    object-fit: contain;
}

.hero-text {
    position: absolute;
    color: white;
	background-color: rgba(0, 0, 0, 0.5); 
    top: 70%; 
    right: 10%; 
    transform: translate(-50%, -50%);
    padding: 5px; 

}

.hero-text h2 {
    font-size: 1.5em;
}

.hero-text p {
    font-size: .5em; 
}

button {
    background-color: #E4EBFB; 
    color: #353535;
    padding: 10px 20px; 
    margin-bottom: 15px;
    font-size: 0.8em; 
    border: none;
    cursor: pointer;
}

button:hover {
    background-color: #cfdcf9;


}








/* Main Content Styling */

main {
    display: grid;
    grid-template-columns: 1fr; 
    max-width: 100%; 
    margin: 0 auto; 
}




/* 
slideshow card style */
.slideshow-card {
    background-color: #f2f2f2; 
    padding: 20px;
    grid-column: 1 / 3;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 100%;
    box-sizing: border-box;
    margin: 10px auto;
}


.content-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
}

.slideshow-container {
    width: 100%;
    position: relative;
}

.slide {
    display: none;
    width: 100%;
}

.slide img {
    width: 100%;
    height: auto;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {opacity: .4} 
    to {opacity: 1}
}

.text-box {
    width: 100%;
    padding: 20px;
    box-sizing: border-box;
    background-color: #f8f8f8;
    border: 1px solid #ddd;
    border-radius: 5px;
    color: #353535;
}








/* event section style */
.event-section {
    background-color: #f2f2f2; 
    padding: 20px;
    grid-column: 1 / 3;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 100%;
    box-sizing: border-box;
    text-align: center;
    margin: 0 auto 10px auto;
    color: #353535;
}

.section-title {
    font-size: 2em;
    margin-bottom: 20px;
}

.text-boxes-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap; 
    gap: 20px; 
    padding: 0 20px;
}

.event-box {
    background-color: #f8f8f8;
    padding: 15px;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: calc(50% - 20px); 

}

/* Responsive adjustments */
@media screen and (max-width: 480px) {
    .event-box {
        width: calc(100% - 20px); 
    }
}







/*member showcase styling*/

.member-slideshow {
    background-color: #f2f2f2; 
    padding: 20px;
    grid-column: 1 / 3;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: 100%;
    box-sizing: border-box;
    text-align: center;
    margin: 0 auto 40px auto;
    color: #353535;
    overflow: hidden;
    max-width: 100%;
    position: relative;
}

.slide {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 20px; 
}

.member-box {
    flex: 0 0 auto; 
    margin: 10px 0; 
    width: 80%; 
    height: auto;
    padding: 10px;
    background-color: #f8f8f8;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);

}

.member-box a {
    text-decoration: none;
    color: #051DE9;
}

.mem-slide {
    flex-direction: column;
    align-items: center;
}




/* map and weather card styling */

.map-weather-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #f2f2f2;
    gap: 20px;
    padding: 20px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
}



.google-map {
    height: 450px; 
    display: flex;
    margin: 10px 20px 10px 20px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);

}

.weather-card {
    background: #f8f8f8; ;
    padding: 20px;
    margin: 10px 20px 10px 20px;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
    text-align: center;
}
.google-map, .weather-card {
    max-width: 800px;
    min-width: 300px;
    width: 100%;
    flex: 1;
}







/* Footer Styling */
footer {
    background: #333;
    color: #fff;
    text-align: center;
    padding: 20px 0;
}



.footer-top {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
    border-bottom: 1px solid #fffaff;
    padding: 20px;
}

.footer-logo {
    width: 100px; 
    height: auto;
}

.footer-info {
    flex-grow: 1;
    margin: 0 20px;
}

.social-media-links {
    margin-top: 10px;
    display: flex;
    justify-content: space-around;
    width: 100px;
}

.social-icon {
    width: 30px; 
    height: auto;
}

